tests/errors/user_function_block_wrong_return.dang
# Test: user-defined function with wrong block return type

withBlock(&block(x: Int!): String!): String! {
  block(42)
}

# ERROR: block returns Int! but should return String!
result: String! = withBlock { x => x * 2 }
